1-Getting-started/template.yml
AWSTemplateFormatVersion: "2010-09-09"
Description: Creates two EC2 instances and an S3 bucket

Resources:
  WebServer:
    Type: AWS::EC2::Instance
    Properties:
      ImageId: "ami-074be47313f84fa38"  # Replace with the correct AMI for your region
      InstanceType: t2.micro
      KeyName: OregonKP  # Replace with your key pair name
      SecurityGroups:
        - Ref: MySecurityGroup
      BlockDeviceMappings:
        -
          DeviceName: /dev/xvda
          Ebs:
            VolumeType: gp2
            DeleteOnTermination: true
            VolumeSize: 8
      Tags:
        - Key: Name
          Value: WebServer

  AppServer:
    Type: AWS::EC2::Instance
    Properties:
      ImageId: "ami-074be47313f84fa38"  # Replace with the correct AMI for your region
      InstanceType: t2.micro
      KeyName: OregonKP  # Replace with your key pair name
      SecurityGroups:
        - Ref: MySecurityGroup
      BlockDeviceMappings:
        -
          DeviceName: /dev/xvda
          Ebs:
            VolumeType: gp2
            DeleteOnTermination: true
            VolumeSize: 10
      Tags:
        - Key: Name
          Value: AppServer

  MySecurityGroup:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Allow SSH and HTTP traffic
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0

  MyS3Bucket:
    Type: AWS::S3::Bucket
    Properties:
      BucketName: m5-s3-bucket
